Created package for MyFirstprogram
Created package for MyFirstprogram

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,4 +1,4 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "MyFirstProgram"
+mainClassName = "pl.jagielka.mateusz.sandbox.MyFirstProgram"
 
