First test created

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -2,3 +2,16 @@ apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "pl.jagielka.mateusz.sandbox.MyFirstProgram"
 
+
+repositories {
+    mavenCentral()
+}
+dependencies {
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
+}
+
+test {
+    useTestNG {
+    }
+}
