TestNG config files added

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -25,7 +25,20 @@ dependencies {
 
 }
 
-test {
+//test {
+//    useTestNG {
+//        suites 'src/test/resources/testng-groups.xml'
+//    }
+//}
+
+task testGroups(type: Test) {
     useTestNG {
+        suites 'src/test/resources/testng-groups.xml'
+    }
+}
+
+task testContacts(type: Test) {
+    useTestNG {
+        suites 'src/test/resources/testng-contacts.xml'
     }
 }
