--- a/addressbook-web-tests/src/test/Resources/local.properties
+++ b/addressbook-web-tests/src/test/Resources/local.properties
@@ -1,3 +1,38 @@
 web.baseUrl = http://localhost/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
+
+dataFilePathJson.contacts = src/test/resources/contacts.json
+dataFilePathJson.groups = src/test/resources/groups.json
+dataFilePathXml.contacts = src/test/resources/contacts.xml
+dataFilePathXml.groups = src/test/resources/groups.xml
+dataFilePathCsv.contacts = src/test/resources/contacts.csv
+dataFilePathCsv.groups = src/test/resources/groups.csv
+
+contact.firstname = Adam
+contact.lastname = Nowak
+contact.address = Longstreet 4, 54-389 London
+contact.address2 = Shortstreet 5, 54-859 Brighton
+contact.homeNumber = +569874125
+contact.mobileNumber = 456-321
+contact.workNumber = (45)6789
+contact.email1 = adam.nowak@secretmail.gov
+contact.email2 = abc@def.gh
+contact.email3 = hgf@edc.ba
+contact.group = test1
+contact.photoPath = src/test/resources/abc.png
+
+contact.modified.firstname = Waldek
+contact.modified.lastname = Kowalski
+
+group.name = test1
+group.header = header1
+group.footer = footer1
+
+group.modified.name = test1a
+group.modified.header = header1a
+group.modified.footer = footer1a
+
+group.badName = test2'
+
+
