--- a/addressbook-web-tests/src/test/Resources/local.properties
+++ b/addressbook-web-tests/src/test/Resources/local.properties
@@ -2,6 +2,8 @@ web.baseUrl = http://localhost/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
 
+db.fileName = hibernate.cfg.xml
+
 dataFilePathJson.contacts = src/test/resources/contacts.json
 dataFilePathJson.groups = src/test/resources/groups.json
 dataFilePathXml.contacts = src/test/resources/contacts.xml
