--- a/addressbook-web-tests/src/test/Resources/local.properties
+++ b/addressbook-web-tests/src/test/Resources/local.properties
@@ -4,8 +4,10 @@ web.adminPassword = secret
 
 db.fileName = hibernate.cfg.xml
 
+verifyUI = true
+
 dataFilePathJson.contacts = src/test/resources/contacts.json
-dataFilePathJson.groups = src/test/resources/groups.json
+dataFilePathJson.groups = src/test/resources/groups3.json
 dataFilePathXml.contacts = src/test/resources/contacts.xml
 dataFilePathXml.groups = src/test/resources/groups.xml
 dataFilePathCsv.contacts = src/test/resources/contacts.csv
